Fixed spacing in cart modal and cleaned code

--- a/ghi/src/Styles/Animal.css
+++ b/ghi/src/Styles/Animal.css
@@ -1,33 +1,37 @@
 .animal_img {
-    position: relative;
+  position: relative;
 }
 
-.right, .left, .top, .bottom {
-    display: inline-block;
+.right,
+.left,
+.top,
+.bottom {
+  display: inline-block;
 }
 
 .right {
-    width: 13rem;
-    margin-top: 13rem;
-    margin-right: 5rem;
-    z-index: 10;
+  width: 13rem;
+  margin-top: 13rem;
+  margin-right: 5rem;
+  z-index: 10;
 }
 
 .left {
-    margin-left: 10rem;
-    margin-top: 15rem;
+  margin-left: 10rem;
+  margin-top: 15rem;
 }
 
 .top {
-    margin-top: 5rem;
-    margin-left: 0rem;
+  margin-top: 5rem;
+  margin-left: 0rem;
 }
 
 .bottom {
-    width: 10rem;
-    margin-top: 22rem;
+  width: 10rem;
+  margin-top: 22rem;
 }
 
-.left, .top {
-    width: 8rem;
+.left,
+.top {
+  width: 8rem;
 }
