--- a/ghi/src/Styles/SignupForm.css
+++ b/ghi/src/Styles/SignupForm.css
@@ -34,11 +34,11 @@ p,
 }
 
 .purple-text:hover {
-    color: #5e518c;
+  color: #5e518c;
 }
 
 .purple-hover::before {
-  content: '';
+  content: "";
   background-color: #9a9dd953;
   position: absolute;
   left: 0;
@@ -46,7 +46,7 @@ p,
   width: 100%;
   height: 8px;
   z-index: -1;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .purple-hover:hover::before {
